# cloche

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  implementation-notes.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/assets/workflows/: hotkey.json
docs/specs/: 2026-06-12-region-capture.md  2026-06-17-setup-onboarding-plan.md  2026-06-17-setup-onboarding.md
remotion/: package-lock.json  package.json
remotion/src/: Reel.tsx  Root.tsx
remotion/src/remocn/: shader-grain-gradient.tsx  staggered-words.tsx
scripts/: cloche-grab.sh  install.ps1  install.sh  linux-vm-smoke.sh  package-release.ps1  package-release.sh  proxmox-vm-smoke.sh  verify  windows-live-capture-test.ps1  windows-schedule-live-test.ps1
src/: backends.rs  captures.rs  cli.rs  clipboard.rs  codex.rs  contract.rs  design.rs  html.rs  lib.rs  main.rs  mcp.rs  polish.rs  reel_hyperframes.rs  setup.rs  space.rs  text.rs  util.rs
src/capture/: mod.rs  windows.rs
src/setup/: agents.rs  flow.rs  hotkey.rs  verify.rs
