[package]
name = "appshots"
version = "0.1.0"
edition = "2024"
description = "Agent-neutral app screenshot capture CLI"
license = "Apache-2.0"
repository = "https://github.com/solomonneas/appshots"
homepage = "https://github.com/solomonneas/appshots"
readme = "README.md"
rust-version = "1.85"
keywords = ["screenshot", "linux", "cli", "mcp", "agents"]
categories = ["command-line-utilities"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/ROADMAP.md",
    "/docs/*.png",
    "/scripts/*.ps1",
    "/scripts/*.sh",
    "/src/**/*.rs",
]

[[bin]]
name = "appshots"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
